@@ -1,5 +1,7 @@
 Tue Mar 12 13:47:09 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* hash.c (findnode): Adjust comment regarding errors.
+
 	* hash.c (findnode, findnode_fn): Assert that key != NULL.  This
 	way the check still happens even if the function is later
 	rewritten to not start out by calling hashp.
